# Cortex-portable-brain

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.ci/: dependency-manifest.sha256
.github/workflows/: ci.yml  docker-publish.yml  release.yml
crates/cortex-app/: Cargo.toml
crates/cortex-app/src/: cli.rs  main.rs  product.rs  proxy.rs
crates/rmvm-sidecar/: Cargo.toml
crates/rmvm-sidecar/src/: main.rs
docker/: Dockerfile
docs/: common_problems.md  compatibility_matrix.md  dashboard.md  forget_ux.md  getting_started.md  migration_from_cortex_rmvm.md  proxy_mode.md  use_cases.md
docs/connectors/: browser_extension.md
docs/operations/: baseline_update_policy.md  server_config.md
docs/providers/: claude.md  gemini.md  ollama.md  openai.md  openclaw.md
docs/security/: controls.md
extension/chrome/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
install/: install.ps1  install.sh
packaging/homebrew/: cortex.rb
packaging/winget/: Cortex.Cortex.yaml
scripts/: check_core_proto_checksums.ps1  check_core_version_lock.ps1  check_dependency_manifest_hash.ps1  demo_m1.ps1  update_dependency_manifest_hash.ps1
