[workspace]
members = [
  "crates/brain-store",
  "crates/adapter-rmvm",
  "crates/planner-guard",
  "crates/cortex-app",
  "crates/rmvm-sidecar",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = "0.8.4"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
dirs = "6.0.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

# Pinned Cortex RMVM core dependencies (tag + commit lock in core_version.lock).
rmvm-grpc = { git = "https://github.com/vinzify/Cortex-v3.1-RMVM---Relational-Memory-Virtual-Machine.git", rev = "f5d7932dfa35b52354ad31ec741d76147066fea5", package = "rmvm-grpc" }
rmvm-proto = { git = "https://github.com/vinzify/Cortex-v3.1-RMVM---Relational-Memory-Virtual-Machine.git", rev = "f5d7932dfa35b52354ad31ec741d76147066fea5", package = "rmvm-proto" }
